styles/css/app.css
/* ... */
#progress_body:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background: #ffffff;
}

#progress_path {
  position: fixed;
  top: 0;
  right: 0;
  width: 0.5rem;
  height: 100%;
  background: transparent;
}

@keyframes slide-left {
  from {
    transform: translateX(55%);
  }
  to {
    transform: translateX(0);
  }
}
@keyframes slide-right {
  from {
    transform: translateX(-55%);
  }
  to {
    transform: translateX(0);
  }
}
@keyframes slide-up {
  from {
    transform: translateY(100%);
  }
  to {
    transform: translateY(0);
  }
}
.hero {
  height: calc(100vh - 5rem);
}

.hero-arrow-container {
  text-align: center;
  position: absolute;
}
@media (max-width: 1279px) {
  .hero-arrow-container {
    left: 0;
    right: 0;
    top: 80vh;
  }
}
@media (min-width: 1280px) {
  .hero-arrow-container {
    top: 85vh;
    right: 4vw;
  }
}

.hero-arrow {
  font-size: 58px;
}
.hero-arrow svg {
  fill: #101010;
  stroke: #8c8c8c;
  stroke-width: 1px;
}

.section-wrapper {
  padding: 3rem 0;
}

.section-header {
  margin-bottom: 2rem;
  font-size: calc(20px + 2.1vw);
}
@media (min-width: 1280px) {
  .section-header {
    font-size: 3rem;
  }
}

.section-text {
  margin: 0 2rem;
  font-size: calc(12px + 1vw);
  line-height: 1.7;
}
@media (min-width: 361px) and (max-width: 414px) {
  .section-text {
    margin: 0 2rem;
  }
}
@media (min-width: 1280px) {
  .section-text {
    font-size: 1.3rem;
  }
}

.d-none {
  display: none;
}

.d-flex {
  display: flex;
}

.d-block {
  display: block;
}

@media (min-width: 360px) and (max-width: 414px) {
  .d-sm-none {
    display: none;
  }

  .d-sm-flex {
    display: flex;
  }

  .d-sm-block {
    display: block;
  }
}
@media (min-width: 768px) and (max-width: 1280px) {
  .d-sm-none {
    display: none;
  }

  .d-sm-flex {
    display: flex;
  }

  .d-sm-block {
    display: block;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .d-lg-none {
    display: none;
  }

  .d-lg-flex {
    display: flex;
  }

  .d-lg-block {
    display: block;
  }
}
.carousel {
  height: calc(100vh - 5rem);
  position: relative;
  z-index: 1;
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel {
    display: flex;
  }
}
@media (min-width: 769px) and (max-width: 1920px) {
  .carousel {
    height: calc(83vh);
  }
}

.carousel-btn-container {
  justify-content: center;
  display: flex;
}
@media (min-width: 769px) and (max-width: 1920px) {
  .carousel-btn-container {
    margin-top: -17vh;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-btn-container {
    justify-content: center;
    flex-direction: column;
  }
}

.carousel-btn {
  font-family: "Montserrat", sans-serif;
  text-decoration: none;
  font-size: 35px;
  font-weight: 800;
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-btn {
    font-size: 58px;
  }
  .carousel-btn svg {
    fill: #101010;
    stroke: #8c8c8c;
    stroke-width: 1px;
  }
}

.carousel-prev {
  margin-left: 0rem;
}
@media (min-width: 768px) and (max-width: 1920px) {
  .carousel-prev {
    margin-left: 3.5rem;
  }
}

.carousel-next {
  margin-right: 0rem;
}
@media (min-width: 768px) and (max-width: 1920px) {
  .carousel-next {
    margin-right: 3.5rem;
  }
}

@supports (-webkit-text-stroke: 1px #8c8c8c) {
  .carousel-btn {
    -webkit-text-stroke: 1px #8c8c8c;
    -webkit-text-fill-color: #101010;
  }
}
.carousel-projects {
  margin: 1rem auto;
}
@media (min-width: 360px) and (max-width: 374px) {
  .carousel-projects {
    margin: 0.5rem auto;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-projects {
    width: 70%;
    margin: 1rem auto;
  }
}

.carousel-cell {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 68vh;
  position: relative;
}
@media (min-width: 361px) and (max-width: 414px) {
  .carousel-cell {
    width: 375px;
    height: 68vh;
  }
}
@media (min-width: 415px) and (max-width: 1280px) {
  .carousel-cell {
    width: 100%;
    height: 75vh;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-cell {
    width: 100%;
  }
}
.carousel-cell img {
  z-index: 10;
  position: relative;
  height: 100%;
  width: 100%;
  object-fit: cover;
}
@media (min-width: 768px) and (max-width: 1920px) {
  .carousel-cell img {
    width: 85%;
  }
}
.carousel-cell h3 {
  z-index: 20;
  position: absolute;
  display: flex;
  justify-content: center;
  align-content: center;
  text-align: center;
  align-items: center;
  text-transform: uppercase;
  font-size: calc(20px + 2.1vw);
}
@media (min-width: 360px) and (max-width: 768px) {
  .carousel-cell h3 {
    width: 100%;
    height: 100%;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-cell h3 {
    right: 0;
    bottom: 4rem;
  }
}

.uses-hero-container {
  position: absolute;
  top: 20vh;
  left: 0;
  right: 0;
}
@media (min-width: 1280px) {
  .uses-hero-container {
    top: 16vh;
    display: flex;
    justify-content: center;
    height: calc(100vh - 30vh);
  }
}

.uses-hero-header {
  font-size: calc(25px + 4vw);
  line-height: 1.3;
}
@media (max-width: 768px) {
  .uses-hero-header {
    text-align: center;
    margin-bottom: 2rem;
  }
}
@media (min-width: 1280px) {
  .uses-hero-header {
    display: flex;
    justify-content: center;
    flex-direction: column;
    flex: 1;
  }
}
.uses-hero-header span {
  display: block;
}

.uses-question-marks-container {
  text-align: center;
}
@media (max-width: 768px) {
  .uses-question-marks-container {
    margin-bottom: 6rem;
  }
}
@media (min-width: 1280px) {
  .uses-question-marks-container {
    display: flex;
    flex: 1;
    flex-flow: row-reverse;
  }
}
@media (min-width: 1280px) {
  .uses-question-marks-container img {
    height: 25rem;
  }
}

/*==ABOUT-HERO==*/
.about-hero-wrapper {
  position: absolute;
  right: 1.5rem;
}
@media (min-width: 414px) {
  .about-hero-wrapper {
    position: relative;
    display: flex;
    right: -1rem;
  }
}
/* ... */

